Fix for license image stretching

--- a/src/styles.css
+++ b/src/styles.css
@@ -307,6 +307,11 @@ input[type=text] {
   margin-bottom: 3px;
 }
 
+.license img {
+  height: 20px;
+  margin-right: 3px;
+}
+
 .badge {
   margin-top: 8px;
   margin-right: 3px;
